@@ -46,7 +46,6 @@ SET(EDIT_WARNING_MESSAGE "Please do not edit this file - it is generated by cmak
 
 # Configuring header file with driver version info
 CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/driver/version_info.h.cmake ${CMAKE_SOURCE_DIR}/driver/version_info.h @ONLY)
-CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/cppconn/version_info.h.cmake ${CMAKE_SOURCE_DIR}/cppconn/version_info.h @ONLY)
 
 # This is needed by windows installer and fro CPACK
 IF(EXISTS "${CMAKE_SOURCE_DIR}/COPYING")
@@ -200,6 +199,27 @@ SET(MYSQLCPPCONN_TEST_NOT_IMPLEMENTED 0 CACHE BOOL "HEAD/trunk QA: invoke method
 
 INCLUDE(${CMAKE_SOURCE_DIR}/FindMySQL.cmake)
 
+SET(MYSQLCLIENT_STATIC_BINDING 1 CACHE BOOL "enable static binding")
+IF(MYSQLCLIENT_STATIC_BINDING AND EXISTS "${CMAKE_SOURCE_DIR}/cmake/mysql_version_info.cmake")
+  INCLUDE(${CMAKE_SOURCE_DIR}/cmake/mysql_version_info.cmake)
+  IF(NOT LIBMYSQL_CPP_VERSION STREQUAL "")
+    SET(MYSQL_VERSION "${LIBMYSQL_CPP_VERSION}")
+  ELSEIF(NOT MYSQL_CPP_SERVER_VERSION STREQUAL "")
+    SET(MYSQL_VERSION "${MYSQL_CPP_SERVER_VERSION}")
+  ENDIF(NOT LIBMYSQL_CPP_VERSION STREQUAL "")
+  STRING(REGEX MATCHALL "([0-9]+.[0-9]+.[0-9]+)" MYSQL_VERSION "${MYSQL_VERSION}")
+
+  IF(LIBMYSQL_CPP_VERSION_ID)
+    SET(MYSQL_NUM_VERSION ${LIBMYSQL_CPP_VERSION_ID})
+  ELSEIF(MYSQL_CPP_SERVER_VERSION_ID)
+    SET(MYSQL_NUM_VERSION ${MYSQL_CPP_SERVER_VERSION_ID})
+  ENDIF(LIBMYSQL_CPP_VERSION_ID)
+ENDIF()
+
+# Configuring header file with DM version info
+CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/cppconn/version_info.h.cmake ${CMAKE_SOURCE_DIR}/cppconn/version_info.h @ONLY)
+
+#
 # ----------------------------------------------------------------------
 # Create package script
 # ----------------------------------------------------------------------
