@@ -30,3 +30,11 @@ with this program; if not, write to the Free Software Foundation, Inc.,
 
 #define MYCPPCONN_DM_VERSION     "@CONNECTOR_MAJOR@.@CONNECTOR_MINOR_PADDED@.@CONNECTOR_PATCH_PADDED@"
 #define MYCPPCONN_DM_VERSION_ID  @CONNECTOR_MAJOR@@CONNECTOR_MINOR_PADDED@@CONNECTOR_PATCH_PADDED@
+
+
+/* Driver version info */
+
+#define MYCPPCONN_STATIC_MYSQL_VERSION     "@MYSQL_VERSION@"
+#define MYCPPCONN_STATIC_MYSQL_VERSION_ID  @MYSQL_NUM_VERSION@
+
+#define MYCPPCONN_BOOST_VERSION            @Boost_VERSION@
